<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <EditText
        android:id="@+id/edit_email_addr3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textEmailAddress" />
    
    <EditText
        android:id="@+id/edit_e_title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_email_addr3"
        android:ems="10"
        android:inputType="text" />
    
    <ListView
        android:id="@+id/email_all_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_all_button_send0"
        android:layout_below="@+id/edit_e_title3" >
        
        <requestFocus />
        
    </ListView>

    <Button
        android:id="@+id/email_all_button_send0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/email_todo_send" />

    <TextView
        android:id="@+id/email_all_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_email_addr3"
        android:layout_alignLeft="@+id/email_all_subject"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/email_addr" />

    <TextView
        android:id="@+id/email_all_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_e_title3"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/edit_e_title3"
        android:text="@string/email_subject" />

</RelativeLayout>
